--- a/style.css
+++ b/style.css
@@ -1,35 +1,66 @@
 body {
-    background-color: rgb(58, 52, 52);
-    padding: 20px;
-    font-family: Arial, sans-serif;
-  }
-  
+  background-color: rgb(58, 52, 52);
+  padding: 20px;
+  font-family: Arial, sans-serif;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#unit {
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+  margin-bottom: 10px;
+  font-size: large;
+}
+
+h1 {
+  padding: 20px;
+  background: rgb(44, 135, 240);
+  border-radius: 20px;
+  text-align: center;
+  margin-bottom: 20px;
+  width: 100%;
+}
+
+input {
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+  margin-bottom: 10px;
+  font-size: large;
+}
+
+select, button {
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+  margin-bottom: 10px;
+  border-radius: 10px;
+}
+
+p {
+  background-color: palegreen;
+  color: black;
+  border-radius: 5px;
+  width: 100%;
+  padding: 10px;
+  box-sizing: border-box;
+  margin-bottom: 10px;
+}
+
+/* Media query for smaller screens (adjust the max-width as needed) */
+@media (max-width: 768px) {
   h1 {
-    padding: 20px;
-    background: rgb(44, 135, 240);
-    border-radius: 20px;
-    text-align: center;
-    margin-bottom: 20px;
+    font-size: 1.5em; /* Increase the font size for h1 on smaller screens */
   }
-  
+
   p {
-    background-color: palegreen;
-    color: black;
-    border-radius: 5px;
-    width: 100%;
-    padding: 10px;
-    box-sizing: border-box;
-    margin-bottom: 10px;
+    font-size: 1.2em; /* Increase the font size for paragraphs on smaller screens */
+    width: 100%; /* Ensure paragraphs take full width on smaller screens */
   }
-  
-  /* Media query for smaller screens (adjust the max-width as needed) */
-  @media (max-width: 768px) {
-    h1 {
-      font-size: 1.5em; /* Increase the font size for h1 on smaller screens */
-    }
-  
-    p {
-      font-size: 1.2em; /* Increase the font size for paragraphs on smaller screens */
-      width: 100%; /* Ensure paragraphs take full width on smaller screens */
-    }
-  }
+}
